[FLINK-39999][table] Make Flink Sql calls unparsable as it is required by Calcite 1.42.0
This closes #28551.